@@ -1,8 +1,9 @@
-Welcome to Jython 2.5rc3
+Welcome to Jython 2.5rc4
 ========================
 
-This is the third release candidate of the 2.5 version of Jython. It partially
-fixes JLine on Cygwin and some threading issues.
+This is the fourth release candidate of the 2.5 version of Jython.  Many bugs
+are fixed in this release, and the regression tests now pass on Windows.  See
+the NEWS file for details.
 
 The release was compiled on Mac OS X with JDK 5 and requires JDK 5 to run.
 
